fixed up results card with info, including cleaning up start and end times, adding a link URL, and collapsing the details

--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,21 @@
     font-weight: bolder;
     background: rgba(0, 0, 100, 0.507);
 }
+a {
+	color: #0254EB
+}
+a:visited {
+	color: #0254EB
+}
+a.morelink {
+	text-decoration:none;
+	outline: none;
+}
+.morecontent span {
+	display: none;
+}
+.comment {
+	width: 400px;
+	background-color: #f0f0f0;
+	margin: 10px;
+}
